--- a/README.adoc
+++ b/README.adoc
@@ -14,7 +14,7 @@ Concevoir un prototype d'application web, qui sera disponible dans l’intranet 
 == Analyse :
 === Le diagramme de classe des entités metiers du projet :
 
-image::diagrame.jpg[Diagramme]
+image::Diagrame.jpg[Diagramme]
 
 [plantuml]
 -----
